--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
         <div class="col-lg-10">
         <p id="introText">Weclome to Escape Room!</p>
-
+          <img src="img/room1.png" alt="image of room with table and door">
 
 
         </div><!--close column-->
