--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Escape Room Game</title>
+    <title>La LA LA </title>
   </head>
   <body>
     <div class="container">
