--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Hi</title>
+    <title>Escape Room</title>
   </head>
   <body>
     <div class="container">
@@ -24,6 +24,15 @@
         </div><!--close row-->
         <div class="row">
         <div class="col-lg-12">
+        </br>
+          <div class="well">
+            <h3>Instructions</h3>
+            <ul>
+              <li>You are trapped in a room.</li>
+              <li>Find the keys to escape the room</li>
+              <li>Once you find the keys, click on them so you can open the door.</li>
+            </ul>
+          </div>
         <h2 id="userReview">User Reviews</h2>
       <blockquote>
         <p>"This game is extremely challenging. I find myself spending restles hours at night trying to depict these intricate puzzles. The creators of this game have my attention and keep me on my toes throughout every level."</p>
