--- a/index.html
+++ b/index.html
@@ -13,23 +13,29 @@
         <h1>Escape Room</h1>
         </div>
         <div class="row">
-        <div class="col-lg-10">
-        <p id="introText">Weclome to Escape Room!</p>
+        <div class="col-md-10" id="introColumn">
+        <p id="introText">Welcome to Escape Room! Curabitur eleifend erat efficitur nunc feugiat bibendum. Aenean pretium quam sit amet libero dapibus, sed placerat ante sagittis. Curabitur faucibus scelerisque velit, a tempus purus lacinia interdum. Curabitur eget ultrices orci. Nunc tempus tincidunt elementum. Proin eget eros augue.</p>
           <img src="img/room1.png" alt="image of room with table and door">
 
 
         </div><!--close column-->
-        <div class="col-lg-2">
+        <div class="col-md-2">
+          <div id="itemsColumn">
+            <h4>Items</h4>
+            <ul>
+
+            </ul>
+          </div>
         </div><!--close column-->
         </div><!--close row-->
         <div class="row">
         <div class="col-lg-12">
         </br>
-          <div class="well">
-            <h3>Instructions</h3>
+          <div class="well" id="instructionsColumn">
             <ul>
+            <li class="instructionsTitle">Instructions</li>
               <li>You are trapped in a room.</li>
-              <li>Find the keys to escape the room</li>
+              <li>Find the keys to escape the room.</li>
               <li>Once you find the keys, click on them so you can open the door.</li>
             </ul>
           </div>
