adjust css identifiers, adjust html

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         </div><!--close column-->
         <div class="col-md-2">
           <div id="itemsColumn">
-            <h4>Items</h4>
+            <h3>Items</h3>
             <ul>
 
             </ul>
+
+
           </div>
         </div><!--close column-->
         </div><!--close row-->
@@ -45,8 +47,8 @@
         <footer>Elon Musk</footer>
       </blockquote>
         </div><!--close column-->
-        <p class="text-center"><small>Copyright 2017</p>
-          <p class="text-center">Julia Sheremet, Kate Trahan, Byron Chang, Jun Li</small></p>
+        <p class="text-center"><small><strong>Copyright 2017</strong></p>
+          <p class="text-center"><strong>Julia Sheremet, Kate Trahan, Byron Chang, Jun Li</strong></small></p>
       </div><!--close row-->
     </div><!--close container-->
 
