add css to webpage

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div class="col-lg-2">
           <div id="itemsColumn">
             <h3>Items</h3>
+              <p id="itemList">Key</p>
           </div>
         </div><!--close column-->
       </div><!--close row-->
