implement bootstrap to webpage

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
         <div class="row">
           <div class="col-lg-10">
-          <img src="img/room1.png" alt="image of room with table and door">
+            <img src="img/room1.png" alt="image of room with table and door">
           </div>
           <div class="col-lg-2">
-          <div id="itemsColumn">
+           <div id="itemsColumn">
             <h3>Items</h3>
               <p id="itemList">Key</p>
           </div>
@@ -33,20 +33,56 @@
         </br>
           <div class="well" id="instructionsColumn">
             <ul>
-            <li class="instructionsTitle">Instructions</li>
+              <li class="instructionsTitle">Instructions</li>
               <li>You are trapped in a room.</li>
               <li>Find the keys to escape the room.</li>
               <li>Once you find the keys, click on them so you can open the door.</li>
             </ul>
           </div>
-          <h2 id="userReview">User Reviews</h2>
-          <blockquote>
-            <p>"This game is extremely challenging. I find myself spending restles hours at night trying to depict these intricate puzzles. The creators of this game have my attention and keep me on my toes throughout every level."</p>
-            <footer>Elon Musk</footer>
-          </blockquote>
+          <div class="col-lg-3">
+            <div class="card" style="width: 10rem;">
+              <img class="card-img-top" src="img/levelone.png" alt="level one image">
+                <div class="card-block">
+                  <center><h4 class="card-title">Easy!</h4></center>
+                  <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="card" style="width: 10rem;">
+                <img class="card-img-top" src="img/level2.png" alt="level two image">
+                  <div class="card-block">
+                    <center><h4 class="card-title">Still Easy!</h4></center>
+                    <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="card" style="width: 10rem;">
+                  <img class="card-img-top" src="img/level3.png" alt="level three image">
+                    <div class="card-block">
+                      <center><h4 class="card-title">Intermediate!</h4></center>
+                      <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-3">
+                  <div class="card" style="width: 10rem;">
+                    <img class="card-img-top" src="img/level4.png" alt="level four image">
+                      <div class="card-block">
+                        <center><h4 class="card-title">Hard!</h4></center>
+                        <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                      </div>
+                    </div>
+                  </div>
+                  <h2 id="userReview">User Reviews</h2>
+                  <blockquote>
+                    <p>"This game is extremely challenging. I find myself spending restles hours at night trying to depict these intricate puzzles. The creators of this game have my attention and keep me on my toes throughout every level."</p>
+                    <footer>Elon Musk</footer>
+                  </blockquote>
         </div><!--close column-->
         <p class="text-center"><small><strong>Copyright 2017</strong></p>
-          <p class="text-center"><strong>Julia Sheremet, Kate Trahan, Byron Chang, Jun Li</strong></small></p>
+        <p class="text-center"><strong>Julia Sheremet, Kate Trahan, Byron Chang, Jun Li</strong></small></p>
       </div><!--close row-->
     </div><!--close container-->
   </body>
