add key to fadeout

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
           </div><!--close column-->
         </div>
         <div class="row">
-          <div class="col-lg-10">
-            <img src="img/room1.png" alt="image of room with table and door">
+          <div class="col-lg-10" id="roombg">
+            <img src="img/room1.png" alt="image of room with table and door" id="room1">
+            <img src="room1/key1.png" id="key1">
           </div>
           <div class="col-lg-2">
            <div id="itemsColumn">
