--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   </div>
                   <h2 id="userReview">User Reviews</h2>
                   <blockquote>
-                    <p>"This game is extremely challenging. I find myself spending restles hours at night trying to depict these intricate puzzles. The creators of this game have my attention and keep me on my toes throughout every level."</p>
+                    <p>"This game is extremely challenging. I find myself spending restless hours at night trying to depict these intricate puzzles. The creators of this game have my attention and keep me on my toes throughout every level."</p>
                     <footer>Elon Musk</footer>
                   </blockquote>
         </div><!--close column-->
