--- a/index.html
+++ b/index.html
@@ -9,30 +9,37 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron">
-        <h1>Escape Room</h1>
+      <div class="row roomarea header">
+        <div class="col-md-12">
+          <h1>Escape Room</h1>
         </div>
-        <div class="row">
+      </div>
+        <div class="row roomarea">
           <div class="col-lg-12" id="introColumn">
           <p id="introText">Welcome to Escape Room! Curabitur eleifend erat efficitur nunc feugiat bibendum. Aenean pretium quam sit amet libero dapibus, sed placerat ante sagittis. Curabitur faucibus scelerisque velit, a tempus purus lacinia interdum. Curabitur eget ultrices orci. Nunc tempus tincidunt elementum. Proin eget eros augue.</p>
           </div><!--close column-->
         </div>
-        <div class="row">
-          <div class="col-lg-10" id="roombg">
+        <div class="row roomarea">
+          <div class="col-md-10" id="roombg">
             <img src="img/room1.png" alt="image of room with table and door" id="room1">
-            <img src="room1/key1.png" id="key1">
+            <div class="objects">
+              <img src="room1/key1.png" id="key1">
+              <div class="door"></div>
+            </div>
+
           </div>
-          <div class="col-lg-2">
+          <div class="col-md-2">
            <div id="itemsColumn">
-            <h3>Items</h3>
-              <p id="itemList">Key</p>
+            <p>test</p>
+            <ul id="inventory">
+            </ul>
           </div>
         </div><!--close column-->
       </div><!--close row-->
-      <div class="row">
+      <div class="row roomarea ">
         <div class="col-lg-12">
         </br>
-          <div class="well" id="instructionsColumn">
+          <div id="instructionsColumn">
             <ul>
               <li class="instructionsTitle">Instructions</li>
               <li>You are trapped in a room.</li>
@@ -76,15 +83,20 @@
                       </div>
                     </div>
                   </div>
-                  <h2 id="userReview">User Reviews</h2>
-                  <blockquote>
-                    <p>"This game is extremely challenging. I find myself spending restless hours at night trying to depict these intricate puzzles. The creators of this game have my attention and keep me on my toes throughout every level."</p>
-                    <footer>Elon Musk</footer>
-                  </blockquote>
+
         </div><!--close column-->
-        <p class="text-center"><small><strong>Copyright 2017</strong></p>
-        <p class="text-center"><strong>Julia Sheremet, Kate Trahan, Byron Chang, Jun Li</strong></small></p>
       </div><!--close row-->
+      <div class="row">
+        <div class="col-md-12">
+          <h2 id="userReview">User Reviews</h2>
+          <blockquote>
+            <p>"This game is extremely challenging. I find myself spending restless hours at night trying to depict these intricate puzzles. The creators of this game have my attention and keep me on my toes throughout every level."</p>
+            <footer>Elon Musk</footer>
+          </blockquote>
+          <p class="text-center"><small><strong>Copyright 2017</strong></p>
+          <p class="text-center"><strong>Julia Sheremet, Kate Trahan, Byron Chang, Jun Li</strong></small></p>
+        </div>
+      </div>
     </div><!--close container-->
   </body>
 </html>
