have functioning checkItem function and open doors if all items required are obtained

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="img/room1.png" alt="image of room with table and door" id="room1">
             <div class="objects">
               <img src="room1/key1.png" id="key1">
-              <div class="door"></div>
+              <div id="door"></div>
             </div>
 
           </div>
