--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
         <div class="row roomarea">
           <div class="col-lg-12" id="introColumn">
-          <p id="introText">Welcome to Escape Room! Curabitur eleifend erat efficitur nunc feugiat bibendum. Aenean pretium quam sit amet libero dapibus, sed placerat ante sagittis. Curabitur faucibus scelerisque velit, a tempus purus lacinia interdum. Curabitur eget ultrices orci. Nunc tempus tincidunt elementum. Proin eget eros augue.</p>
+          <p id="introText">Welcome to Escape Room! Read the instructions below to countinue. Good luck...</p>
           </div><!--close column-->
         </div>
         <div class="row roomarea">
@@ -30,7 +30,7 @@
           </div>
           <div class="col-md-2">
            <div id="itemsColumn">
-            <p>test</p>
+            <p>Inventory</p>
             <ul id="inventory">
             </ul>
           </div>
@@ -43,8 +43,8 @@
             <ul>
               <li class="instructionsTitle">Instructions</li>
               <li>You are trapped in a room.</li>
-              <li>Find the keys to escape the room.</li>
-              <li>Once you find the keys, click on them so you can open the door.</li>
+              <li>Find the key to escape the room.</li>
+              <li>Once you find the key, click on them so you can open the door.</li>
             </ul>
           </div>
           <div class="col-lg-3">
