add fixed room size

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
           <p id="introText">Welcome to Escape Room! Read the instructions below to countinue. Good luck...</p>
           </div><!--close column-->
         </div>
-        <div class="row roomarea">
-          <div class="col-md-10" id="roombg">
+        <div class="boxed roomarea">
+          <div class="box1" id="roombg">
             <img src="img/room1.png" alt="image of room with table and door" id="room1">
             <div class="objects">
-              <img src="room1/key1.png" id="key1">
               <div id="door"></div>
+              <img src="room1/key1.png" id="key1">
+
             </div>
 
           </div>
-          <div class="col-md-2">
+          <div class="box2">
            <div id="itemsColumn">
             <p>Inventory</p>
             <ul id="inventory">
