add styling to align inventory objects to the left

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
           <div class="box2">
            <div id="itemsColumn">
-            <p>Inventory</p>
+            <h3>INVENTORY</h3>
             <ul id="inventory">
             </ul>
           </div>
@@ -45,7 +45,7 @@
               <li class="instructionsTitle">Instructions</li>
               <li>You are trapped in a room.</li>
               <li>Find the key to escape the room.</li>
-              <li>Once you find the key, click on them so you can open the door.</li>
+              <li>Once you find the key, click on the door to ESCAPE!</li>
             </ul>
           </div>
           <div class="col-lg-3">
