implement room2 image and book

--- a/roomtwo.html
+++ b/roomtwo.html
@@ -5,26 +5,26 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Escape Room</title>
+    <title>Escape Room Room 2</title>
   </head>
   <body>
     <div class="container">
       <div class="row roomarea header">
         <div class="col-md-12">
-          <h1>Escape Room</h1>
+          <h1>Room 2</h1>
         </div>
       </div>
         <div class="row roomarea">
           <div class="col-lg-12" id="introColumn">
-          <p id="introText">Escape Room Level 1</p>
+          <p id="introText">Escape Room Level 2</p>
           </div><!--close column-->
         </div>
         <div class="boxed roomarea">
           <div class="box1" id="roombg">
-            <img src="img/room1.png" alt="image of room with table and door" id="room1">
+            <img src="room2/room2.png" alt="image of room with table and door" id="room2">
             <div class="objects">
               <div id="door"></div>
-              <img src="room1/key1.png" id="key1">
+              <img src="room2/book.png" id="r2_book">
 
             </div>
 
