--- a/roomtwo.html
+++ b/roomtwo.html
@@ -23,9 +23,9 @@
           <div class="box1" id="roombg">
             <img src="room2/room2.png" alt="image of room with table and door" id="room2">
             <div class="objects">
-              <div id="door"></div>
               <img src="room2/book.png" id="r2_book">
-
+              <img src="room2/specs.png" id="r2_specs">
+              <img src="room2/saturn.png" id="r2_saturn">
             </div>
 
           </div>
