add onclick function to door page1

--- a/roomtwo.html
+++ b/roomtwo.html
@@ -54,7 +54,7 @@
               <img class="card-img-top" src="img/levelone.png" alt="level one image">
                 <div class="card-block">
                   <center><h4 class="card-title">Easy!</h4></center>
-                  <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                  <center><a href="#" class="btn btn-primary buttonborder" id="firstLevelButton">Start</a></center>
                 </div>
               </div>
             </div>
