--- a/roomthree.html
+++ b/roomthree.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+      <link href="css/room3.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Escape Room Room 3</title>
@@ -23,8 +24,10 @@
           <div class="box1" id="roombg">
             <img src="room3/room3.png" alt="image of room with table and door" id="room1">
             <div class="objects">
-              <div id="door"></div>
-              <img src="room1/key1.png" id="key1">
+              <div></div>
+              <img src="room3/cactus.png" id="r3_cactus">
+              <img src="room3/pizza.png" id="r3_pizza">
+              <img src="room3/pineapple.png" id="r3_pineapple">
 
             </div>
 
