--- a/roomtwo.html
+++ b/roomtwo.html
@@ -26,6 +26,7 @@
               <img src="room2/book.png" id="r2_book">
               <img src="room2/specs.png" id="r2_specs">
               <img src="room2/saturn.png" id="r2_saturn">
+              <img src="img/lev2.PNG" alt="level two banner" id="level2Img">
             </div>
           </div>
           <div class="box2">
@@ -62,7 +63,7 @@
                 <img class="card-img-top" src="img/level2.png" alt="level two image">
                   <div class="card-block">
                     <center><h4 class="card-title">Still Easy!</h4></center>
-                    <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                    <center><a href="#" class="btn btn-primary buttonborder" id="secondLevelButton">Start</a></center>
                   </div>
                 </div>
               </div>
