add page 2 js, clickable objects and tally of inventory

--- a/roomtwo.html
+++ b/roomtwo.html
@@ -44,9 +44,9 @@
             <ul>
               <li class="instructionsTitle">Instructions</li>
               <li>You are trapped in a room.</li>
-              <li>Find the sixth planet from the sun.</li>
+              <li>Find the glasses.</li>
               <li>Find something to read.</li>
-              <li>Ben Franklin created the ____.</li>
+              <li>After you find these items, click on the sixth planet from the sun.</li>
             </ul>
           </div>
           <div class="col-lg-3">
