add javascript, clickable functions

--- a/roomthree.html
+++ b/roomthree.html
@@ -25,9 +25,11 @@
             <img src="room3/room3.png" alt="image of room with table and door" id="room1">
             <div class="objects">
               <div></div>
+
               <img src="room3/cactus.png" id="r3_cactus">
               <img src="room3/pizza.png" id="r3_pizza">
               <img src="room3/pineapple.png" id="r3_pineapple">
+              <div id="bunny"></div>
 
             </div>
 
@@ -74,7 +76,7 @@
                   <img class="card-img-top" src="img/level3.png" alt="level three image">
                     <div class="card-block">
                       <center><h4 class="card-title">Intermediate!</h4></center>
-                      <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                      <center><a href="#" class="btn btn-primary buttonborder" id="thirdLevelButton">Start</a></center>
                     </div>
                   </div>
                 </div>
