add functions for active items on photo

--- a/roomthree.html
+++ b/roomthree.html
@@ -45,20 +45,12 @@
       <div class="row roomarea ">
         <div class="col-lg-12">
         </br>
-          <div id="instructionsColumn">
-            <ul>
-              <li class="instructionsTitle">Instructions</li>
-              <li>You are trapped in a room.</li>
-              <li>Find the key to escape the room.</li>
-              <li>Once you find the key, click on the door to ESCAPE!</li>
-            </ul>
-          </div>
           <div class="col-lg-3">
             <div class="card" style="width: 10rem;">
               <img class="card-img-top" src="img/levelone.png" alt="level one image">
                 <div class="card-block">
                   <center><h4 class="card-title">Easy!</h4></center>
-                  <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                  <center><a href="index.html" class="btn btn-primary buttonborder">Start</a></center>
                 </div>
               </div>
             </div>
@@ -67,7 +59,7 @@
                 <img class="card-img-top" src="img/level2.png" alt="level two image">
                   <div class="card-block">
                     <center><h4 class="card-title">Still Easy!</h4></center>
-                    <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                    <center><a href="roomtwo.html" class="btn btn-primary buttonborder">Start</a></center>
                   </div>
                 </div>
               </div>
@@ -88,6 +80,14 @@
                         <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
                       </div>
                     </div>
+                  </div>
+                  <div id="instructionsColumn">
+                    <ul>
+                      <li class="instructionsTitle">Instructions</li>
+                      <li>You are trapped in a room.</li>
+                      <li>Find the key to escape the room.</li>
+                      <li>Once you find the key, click on the door to ESCAPE!</li>
+                    </ul>
                   </div>
 
         </div><!--close column-->
