--- a/roomtwo.html
+++ b/roomtwo.html
@@ -40,21 +40,12 @@
       <div class="row roomarea ">
         <div class="col-lg-12">
         </br>
-          <div id="instructionsColumn">
-            <ul>
-              <li class="instructionsTitle">Instructions</li>
-              <li>You are trapped in a room.</li>
-              <li>Find the glasses.</li>
-              <li>Find something to read.</li>
-              <li>After you find these items, click on the sixth planet from the sun.</li>
-            </ul>
-          </div>
           <div class="col-lg-3">
             <div class="card" style="width: 10rem;">
               <img class="card-img-top" src="img/levelone.png" alt="level one image">
                 <div class="card-block">
                   <center><h4 class="card-title">Easy!</h4></center>
-                  <center><a href="#" class="btn btn-primary buttonborder" id="firstLevelButton">Start</a></center>
+                  <center><a href="index.html" class="btn btn-primary buttonborder" id="firstLevelButton">Start</a></center>
                 </div>
               </div>
             </div>
@@ -84,6 +75,15 @@
                         <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
                       </div>
                     </div>
+                  </div>
+                  <div id="instructionsColumn">
+                    <ul>
+                      <li class="instructionsTitle">Instructions</li>
+                      <li>You are trapped in a room.</li>
+                      <li>Find the glasses.</li>
+                      <li>Find something to read.</li>
+                      <li>After you find these items, click on the sixth planet from the sun.</li>
+                    </ul>
                   </div>
 
         </div><!--close column-->
