--- a/roomthree.html
+++ b/roomthree.html
@@ -68,7 +68,7 @@
                   <img class="card-img-top" src="img/level3.png" alt="level three image">
                     <div class="card-block">
                       <center><h4 class="card-title">Intermediate!</h4></center>
-                      <center><a href="#" class="btn btn-primary buttonborder" id="thirdLevelButton">Start</a></center>
+                      <center><a href="#" id="skiplevel" class="btn btn-primary buttonborder" id="thirdLevelButton">Start</a></center>
                     </div>
                   </div>
                 </div>
@@ -77,7 +77,7 @@
                     <img class="card-img-top" src="img/level4.png" alt="level four image">
                       <div class="card-block">
                         <center><h4 class="card-title">Hard!</h4></center>
-                        <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                        <center><a href="#" id="skiplevel" class="btn btn-primary buttonborder">Start</a></center>
                       </div>
                     </div>
                   </div>
