--- a/roomtwo.html
+++ b/roomtwo.html
@@ -26,7 +26,9 @@
               <img src="room2/book.png" id="r2_book">
               <img src="room2/specs.png" id="r2_specs">
               <img src="room2/saturn.png" id="r2_saturn">
-              <img src="img/lev2.PNG" alt="level two banner" id="level2Img">
+              <div class="levelannounce">
+                  <img src="img/lev2.PNG" alt="level two banner" id="level2Img">
+              </div>
             </div>
           </div>
           <div class="box2">
