--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="objects">
               <div id="door"></div>
               <img src="room1/key1.png" id="key1">
-              <img src="img/lev1.PNG" alt="level one banner" id="level1Img">
+              <img src="img/lev1_edit.png" alt="level one banner" id="level1Img">
 
             </div>
 
