add index 4 image

--- a/roomthree.html
+++ b/roomthree.html
@@ -30,6 +30,7 @@
               <img src="room3/pizza.png" id="r3_pizza">
               <img src="room3/pineapple.png" id="r3_pineapple">
               <div id="bunny"></div>
+              <img src="img/lev3_edit.PNG" alt="level two banner" id="level3Img">
 
             </div>
 
@@ -68,7 +69,7 @@
                   <img class="card-img-top" src="img/level3.png" alt="level three image">
                     <div class="card-block">
                       <center><h4 class="card-title">Intermediate!</h4></center>
-                      <center><a href="#" id="skiplevel" class="btn btn-primary buttonborder" id="thirdLevelButton">Start</a></center>
+                      <center><a href="#" class="btn btn-primary buttonborder" id="thirdLevelButton">Start</a></center>
                     </div>
                   </div>
                 </div>
