add roomfour.html functionality

--- a/roomfour.html
+++ b/roomfour.html
@@ -25,6 +25,7 @@
             <img src="room4/room4.png" alt="scary room" id="room4">
             <div class="objects">
               <img src="room4/circ_3.png" id="r4_circle">
+                <img src="img/lev4_edit.PNG" alt="level four banner" id="level4Img">
 
             </div>
 
@@ -53,7 +54,7 @@
               <img class="card-img-top" src="img/levelone.png" alt="level one image">
                 <div class="card-block">
                   <center><h4 class="card-title">Easy!</h4></center>
-                  <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                  <center><a href="index.html" class="btn btn-primary buttonborder">Start</a></center>
                 </div>
               </div>
             </div>
@@ -62,7 +63,7 @@
                 <img class="card-img-top" src="img/level2.png" alt="level two image">
                   <div class="card-block">
                     <center><h4 class="card-title">Still Easy!</h4></center>
-                    <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                    <center><a href="roomtwo.html" class="btn btn-primary buttonborder">Start</a></center>
                   </div>
                 </div>
               </div>
@@ -71,7 +72,7 @@
                   <img class="card-img-top" src="img/level3.png" alt="level three image">
                     <div class="card-block">
                       <center><h4 class="card-title">Intermediate!</h4></center>
-                      <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                      <center><a href="roomthree.html" class="btn btn-primary buttonborder">Start</a></center>
                     </div>
                   </div>
                 </div>
@@ -80,7 +81,7 @@
                     <img class="card-img-top" src="img/level4.png" alt="level four image">
                       <div class="card-block">
                         <center><h4 class="card-title">Hard!</h4></center>
-                        <center><a href="#" class="btn btn-primary buttonborder">Start</a></center>
+                        <center><a href="#" id="fourthLevelButton" class="btn btn-primary buttonborder">Start</a></center>
                       </div>
                     </div>
                   </div>
