--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img class="card-img-top" src="img/level2.png" alt="level two image">
                   <div class="card-block">
                     <center><h4 class="card-title">Still Easy!</h4></center>
-                    <center><a href="#" id="skiplevel" class="btn btn-primary buttonborder">Start</a></center>
+                    <center><a href="#" class="btn btn-primary buttonborder skiplevel">Start</a></center>
                   </div>
                 </div>
               </div>
@@ -64,7 +64,7 @@
                   <img class="card-img-top" src="img/level3.png" alt="level three image">
                     <div class="card-block">
                       <center><h4 class="card-title">Intermediate!</h4></center>
-                      <center><a href="#" id="skiplevel" class="btn btn-primary buttonborder">Start</a></center>
+                      <center><a href="#" class="btn btn-primary buttonborder skiplevel">Start</a></center>
                     </div>
                   </div>
                 </div>
@@ -73,7 +73,7 @@
                     <img class="card-img-top" src="img/level4.png" alt="level four image">
                       <div class="card-block">
                         <center><h4 class="card-title">Hard!</h4></center>
-                        <center><a href="#" id="skiplevel" class="btn btn-primary buttonborder">Start</a></center>
+                        <center><a href="#"  class="btn btn-primary buttonborder skiplevel">Start</a></center>
                       </div>
                     </div>
                   </div>
