--- a/roomthree.html
+++ b/roomthree.html
@@ -25,15 +25,12 @@
             <img src="room3/room3.png" alt="image of room with table and door" id="room1">
             <div class="objects">
               <div></div>
-
               <img src="room3/cactus.png" id="r3_cactus">
               <img src="room3/pizza.png" id="r3_pizza">
               <img src="room3/pineapple.png" id="r3_pineapple">
               <div id="bunny"></div>
-              <img src="img/lev3_edit.PNG" alt="level two banner" id="level3Img">
-
+              <img src="img/lev3_edit.PNG" alt="level three banner" id="level3Img">
             </div>
-
           </div>
           <div class="box2">
            <div id="itemsColumn">
@@ -78,7 +75,7 @@
                     <img class="card-img-top" src="img/level4.png" alt="level four image">
                       <div class="card-block">
                         <center><h4 class="card-title">Hard!</h4></center>
-                        <center><a href="#" id="skiplevel" class="btn btn-primary buttonborder">Start</a></center>
+                        <center><a href="#" class="btn btn-primary buttonborder skiplevel">Start</a></center>
                       </div>
                     </div>
                   </div>
