add row to instructions column on all the pages

--- a/roomthree.html
+++ b/roomthree.html
@@ -40,9 +40,9 @@
           </div>
         </div><!--close column-->
       </div><!--close row-->
-      <div class="row roomarea ">
+      <div class="row roomarea">
         <div class="col-lg-12">
-        </br>
+          <div class="row">
           <div class="col-lg-3">
             <div class="card" style="width: 10rem;">
               <img class="card-img-top" src="img/levelone.png" alt="level one image">
@@ -79,16 +79,18 @@
                       </div>
                     </div>
                   </div>
-                  <div id="instructionsColumn">
+                </div>
+                <div class="row">
+                  <div class="col-lg-12" id="instructionsColumn">
+                    <h2 id="line">Instructions</h2>
                     <ul>
-                      <li class="instructionsTitle">Instructions</li>
                       <li>You are trapped in a room.</li>
                       <li>Find the key to escape the room.</li>
                       <li>Once you find the key, click on the door to ESCAPE!</li>
                     </ul>
                   </div>
-
-        </div><!--close column-->
+                </div>
+              </div>
       </div><!--close row-->
       <div class="row">
         <div class="col-md-12">
