--- a/roomtwo.html
+++ b/roomtwo.html
@@ -76,14 +76,15 @@
                       </div>
                     </div>
                   </div>
-                  <div id="instructionsColumn">
-                    <ul>
-                      <li class="instructionsTitle">Instructions</li>
-                      <li>You are trapped in a room.</li>
-                      <li>Find the glasses.</li>
-                      <li>Find something to read.</li>
-                      <li>After you find these items, click on the sixth planet from the sun.</li>
-                    </ul>
+                  <div class="row">
+                    <div class="col-lg-12" id="instructionsColumn">
+                      <h2 id="line">Instructions</h2>
+                      <ul>
+                        <li>You are trapped in a room.</li>
+                        <li>Find the key to escape the room.</li>
+                        <li>Once you find the key, click on the door to ESCAPE!</li>
+                      </ul>
+                    </div>
                   </div>
 
         </div><!--close column-->
