--- a/roomfour.html
+++ b/roomfour.html
@@ -85,6 +85,16 @@
                       </div>
                     </div>
                   </div>
+                  <div class="row">
+                    <div class="col-lg-12" id="instructionsColumn">
+                      <h2 id="line">Instructions</h2>
+                      <ul>
+                        <li>You are trapped in a room.</li>
+                        <li>Find the key to escape the room.</li>
+                        <li>Once you find the key, click on the door to ESCAPE!</li>
+                      </ul>
+                    </div>
+                  </div>
 
         </div><!--close column-->
       </div><!--close row-->
