have functions to open door in room 4

--- a/roomfour.html
+++ b/roomfour.html
@@ -25,6 +25,7 @@
             <img src="room4/room4.png" alt="scary room" id="room4">
             <div class="objects">
               <img src="room4/circ_3.png" id="r4_circle">
+              <div id="r4_door"></div>
 
             </div>
 
