--- a/roomfour.html
+++ b/roomfour.html
@@ -43,14 +43,6 @@
       <div class="row roomarea ">
         <div class="col-lg-12">
         </br>
-          <div id="instructionsColumn">
-            <ul>
-              <li class="instructionsTitle">Instructions</li>
-              <li>You are trapped in a room.</li>
-              <li>Find the key to escape the room.</li>
-              <li>Once you find the key, click on the door to ESCAPE!</li>
-            </ul>
-          </div>
           <div class="col-lg-3">
             <div class="card" style="width: 10rem;">
               <img class="card-img-top" src="img/levelone.png" alt="level one image">
@@ -90,10 +82,9 @@
                   <div class="row">
                     <div class="col-lg-12" id="instructionsColumn">
                       <h2 id="line">Instructions</h2>
+                      <p><strong>Solve the riddle to escape to the final level:</strong></p>
                       <ul>
-                        <li>You are trapped in a room.</li>
-                        <li>Find the key to escape the room.</li>
-                        <li>Once you find the key, click on the door to ESCAPE!</li>
+                        <li>Age, Inflation, Heilium.</li>
                       </ul>
                     </div>
                   </div>
