--- a/index.html
+++ b/index.html
@@ -77,14 +77,16 @@
                       </div>
                     </div>
                   </div>
-                  <div id="instructionsColumn">
-                    <ul>
-                      <li class="instructionsTitle">Instructions</li>
+                  <div class="row">
+                    <div class="col-lg-12" id="instructionsColumn">
+                      <h2 id="line">Instructions</h2>
+                      <ul>
                       <li>You are trapped in a room.</li>
                       <li>Find the key to escape the room.</li>
                       <li>Once you find the key, click on the door to ESCAPE!</li>
                     </ul>
                   </div>
+                </div>
         </div><!--close column-->
       </div><!--close row-->
       <div class="row">
