--- a/roomtwo.html
+++ b/roomtwo.html
@@ -79,10 +79,11 @@
                   <div class="row">
                     <div class="col-lg-12" id="instructionsColumn">
                       <h2 id="line">Instructions</h2>
+                      <p><strong>Solve the riddle to find the items that help you escape:</strong></p>
                       <ul>
-                        <li>You are trapped in a room.</li>
-                        <li>Find the key to escape the room.</li>
-                        <li>Once you find the key, click on the door to ESCAPE!</li>
+                        <li>My spine stiff My body pale I'm always ready to tell a tale!</li>
+                        <li>What must be looked through in order to see?</li>
+                        <li>I’m full of gas but I’m not a car. I have many rings but I’m not a jewelry store.</li>
                       </ul>
                     </div>
                   </div>
@@ -93,8 +94,8 @@
         <div class="col-md-12">
           <h2 id="userReview">User Reviews</h2>
           <blockquote>
-            <p>"This game is extremely challenging. I find myself spending restless hours at night trying to depict these intricate puzzles. The creators of this game have my attention and keep me on my toes throughout every level."</p>
-            <footer>Elon Musk</footer>
+            <p>"No one can ABSOLUTELY play this game better than I can."</p>
+            <footer>Donald Trump</footer>
           </blockquote>
           <p class="text-center"><small><strong>Copyright 2017</strong></p>
           <p class="text-center"><strong>Julia Sheremet, Kate Trahan, Byron Chang, Jun Li</strong></small></p>
