--- a/roomthree.html
+++ b/roomthree.html
@@ -84,10 +84,12 @@
                 <div class="row">
                   <div class="col-lg-12" id="instructionsColumn">
                     <h2 id="line">Instructions</h2>
+                  <p><strong>Solve the riddle to find the items that help you escape Saturn:</strong></p>
                     <ul>
-                      <li>You are trapped in a room.</li>
-                      <li>Find the key to escape the room.</li>
-                      <li>Once you find the key, click on the door to ESCAPE!</li>
+                      <li>I smell cheesy and delivered in a box.</li>
+                      <li>I have leaves on my fruit, my fruit is on my leaves, what am I?</li>
+                      <li>I can't move but the earth around me can. The place I live in is either too hot or too cold. If you cut me open you can find liquids in me. What am I?</li>
+                      <li>Now click the rabbit to escape!</li>
                     </ul>
                   </div>
                 </div>
