--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
         <div class="row roomarea">
           <div class="col-lg-12" id="introColumn">
-          <p id="introText">Escape Room Level 1</p>
+          <p id="introText">Byron's House</p>
           </div><!--close column-->
         </div>
         <div class="boxed roomarea">
