clean up some code

--- a/roomfive.html
+++ b/roomfive.html
@@ -23,6 +23,7 @@
         <div id="specs"></div>
         <div id="alien"></div>
         <div id="key"></div>
+        <div id="circ"></div>
       </div>
       <div class="dead"></div>
       <div class="intro"></div>
