have 6th level where user fights boss on dice rolls

--- a/roomsix.html
+++ b/roomsix.html
@@ -4,6 +4,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/room6.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
+    <script src="bossRoom/fightScripts.js"></script>
     <title>Final Level +1</title>
   </head>
   <body class="back">
@@ -12,9 +13,11 @@
       <div class="room6">
         <div class="progress" style="width: 80%; margin:auto;">
           <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-            <span class="sr-only">80% Complete (danger)</span>
+          <span class="sr-only">80% Complete (danger)</span>
           </div>
         </div>
+        <div id="msg"><p id="output" style="color: #fff;">Fight!</p></div>
+        <div id="fight"><h3>FIGHT</h3></div>
       </div>
       <div class="objects">
       </div>
